objects/JobApplication__c.object
<CustomObject>
    <description>Represents the junction object between a
candidate and a position</description>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>JobApplications</relationshipLabel>
        <relationshipName>JobApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoverLetter__c</fullName>
        <label>CoverLetter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>JobApplications</relationshipLabel>
        <relationshipName>JobApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
                <value>
                    <fullName>Extend an Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>JobApplication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>JobApplication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobApplications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>